Remove enterID modal
Remove the enterID modal from the home and details page.
The scan button is hidden on the home page when the app is run in a browser.

--- a/client/src/app/views/home/home.scss
+++ b/client/src/app/views/home/home.scss
@@ -8,7 +8,14 @@
 .home-body {
 
 	padding: 0;
-	@include scrollable-parent(85px, 0, 0, 0);
+
+	&.scan-button-padding {
+		@include scrollable-parent(85px, 0, 0, 0);
+	}
+
+	&.no-scan-button-padding {
+		@include scrollable-parent(0, 0, 0, 0);
+	}
 
 	.scan-button-container {
 		width: 100%;
