--- a/client/src/app/views/home/home.html
+++ b/client/src/app/views/home/home.html
@@ -4,26 +4,15 @@
  -->
 
 <!-- Modals -->
-
-<!-- enter id modal USED ONLY ON WEBSITE VERSION -->
-<!-- Must be in here and not in modals.template.html as it utilizes 'vm' -->
-<!--NOTE: This modal will be replaced by a scanner when on a device-->
-<div class="reveal large" data-reveal id="enterIdModal">
-    <h1>Input device ID</h1>
-    <input type="text" ng-model="inputValue" placeholder="enter text..." />
-    <div data-close ng-click="vm.scanSuccess({cancelled: false, text: inputValue})">Submit</div>
-    <div data-close style="float: right;">Cancel</div>
-</div>
-
 <!-- ID scanned is incorrect or doesn't exist in DB -->
 <div class="reveal large text-center" data-reveal id="invalidId">
     <h1 class="error-message">Invalid ID</h1>
     <div data-close class="secondary button">Okay</div>
 </div>
 
-<div class="home-body">
+<div class="home-body" ng-class="vm.scanButtonPadding()">
 
-    <div class="scan-button-container">
+    <div class="scan-button-container" ng-show="vm.isOnDevice">
         <button class="checkit-button" ng-click="openScanner()">SCAN</button>
     </div>
 
