Update Invalid ID modal
Replaced "Try again" and "Cancel" buttons with an "Okay" button.

Resolves #6

--- a/client/src/app/views/home/home.html
+++ b/client/src/app/views/home/home.html
@@ -16,10 +16,9 @@
 </div>
 
 <!-- ID scanned is incorrect or doesn't exist in DB -->
-<div class="reveal large" data-reveal id="invalidId">
+<div class="reveal large text-center" data-reveal id="invalidId">
     <h1 class="error-message">Invalid ID</h1>
-    <a data-close id="tryagain" ng-click="openScanner()">Try another ID</a>
-    <a data-close id="cancel" >Cancel</a>
+    <div data-close class="secondary button">Okay</div>
 </div>
 
 <div class="home-body">
