Add integrated validation
Adds an on-screen text box to be used for validation instead of modal.

Resolves #11

--- a/client/src/app/views/details/details.directives/detail-buttons/detail-buttons.template.html
+++ b/client/src/app/views/details/details.directives/detail-buttons/detail-buttons.template.html
@@ -36,6 +36,8 @@
             </div>
         </div>
     </div>
+    <!--Validation View-->
+    <validation></validation>
     <!--Date Picker apply-->
     <div class="simple-button-container" ng-switch-when="checkoutView">
         <!--ng-if="checkoutView"-->
