--- a/client/src/app/views/details/details.scss
+++ b/client/src/app/views/details/details.scss
@@ -14,6 +14,7 @@
         overflow-x: hidden;
         .details-content {
             overflow: auto;
+            min-height: 310px;
             .device-info {
                 padding: 0 15px;
                 margin-bottom: 15px;
