Add employee dropdown to client
Added the angucomplete-alt dropdown package to bower.
Added the dropdown to the 'checkout for someone' else option.
Injected the employee data from the Google Directory API into
the dropdown.
Styled the dropdown to match CheckIT styling.
Set up the details.controller to use the employee's email from
the dropdown.

--- a/client/src/app/views/details/details.html
+++ b/client/src/app/views/details/details.html
@@ -49,14 +49,21 @@
                                 <!-- Admin only -->
                                 <div class="inputEmail" ng-if="vm.isAdmin">
                                     <!-- <span class="instruction">Checkout for someone else?</span><input type="checkbox" ng-model="isCheckoutFor"></input> -->
-                                    <div ng-show="!vm.isCheckoutFor" class="fade for-someone-button">
+                                    <div ng-show="!vm.isCheckoutFor" class="for-someone-button">
                                         <button class="checkit-button" ng-click="vm.isCheckoutFor = true">Checkout for someone else?</button>
                                     </div>
-                                    <div ng-show="vm.isCheckoutFor" class="input-block fade">
-                                        <!-- <div class="title">checkout for:</div> -->
-                                        <input placeholder="Their Pointsource Email" ng-model="vm.checkoutFor.email" />
+                                    <div ng-show="vm.isCheckoutFor" class="input-block">
+                                        <!-- <div class="title">checkout for:</div> --> 
                                         <div class="row">
-                                            <div class="email-input"></div>
+                                            <angucomplete-alt class="email-input"
+                                                    placeholder="Search employees"
+                                                    pause="100"
+                                                    selected-object="vm.checkoutFor"
+                                                    local-data="vm.userDirectory"
+                                                    local-search="vm.searchUsers"
+                                                    title-field="name.fullName"
+                                                    description-field="primaryEmail"
+                                                    minlength="1"/>
                                             <div class="email-image" ng-click="vm.isCheckoutFor = false; vm.checkoutFor.email = null">
                                                 <i class="fa fa-remove"></i>
                                             </div>
