Polish integrated validation
Removed unnecessary line of code in details controller.
Updated styling for checkit logo in header.

--- a/client/src/app/views/layout/header/header.scss
+++ b/client/src/app/views/layout/header/header.scss
@@ -41,9 +41,10 @@
                 }
 
                 .image-title {
+                    padding-bottom: 5px;
                 	@include relative-center;
                     width: 103px;
-                    height: 29px;
+                    height: 35px;
                 }
             }
 
