Fix bugs in checkout process
Updated styling for checkout for someone else input field.
Updated the view displayed after scanSuccess function is called.
Fix bug with error not displaying after checkout for someone else
is used once.
Set checkout for someone else button to be displayed at start of
check in and check out process.

--- a/client/src/app/views/details/details.scss
+++ b/client/src/app/views/details/details.scss
@@ -14,7 +14,8 @@
         overflow-x: hidden;
 
         .details-content {
-            min-height: 310px;
+            height: 100%;
+            overflow: auto;
             .device-info {
                 padding: 0 15px;
                 margin-bottom: 15px;
