--- a/client/src/app/views/details/details.directives/device-delete/device-delete.template.html
+++ b/client/src/app/views/details/details.directives/device-delete/device-delete.template.html
@@ -12,10 +12,10 @@
 
 <div id="deleteFailedModal" class="reveal large dialog">
     <h2 class="error-message">Incorrect asset title</h2>
-    <a data-close style="float: right;">Okay</a>
+    <div data-close style="float: right;">Okay</div>
 </div>
 
 <div id="deleteSuccessModal" class="reveal large dialog">
     <h3>{{deviceDeleteCtrl.deviceName}} successfully deleted</h3>
-    <a data-close ng-click="$root.back()" style="float: right;">Close</a>
+    <div data-close ng-click="$root.back()" style="float: right;">Close</div>
 </div>
