Polish chronological history view
Added types to documentation.
Added missing semicolons.
Changed spacing in history.route.js from tabs to spaces.

--- a/client/src/app/views/history/history.scss
+++ b/client/src/app/views/history/history.scss
@@ -40,7 +40,7 @@
                 text-align: right;
             }
             .checked-out-by {
-                color: $checkit-subcolor
+                color: $checkit-subcolor;
             }
         }
         .largeRecord {
