--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -9,6 +9,10 @@ body {
     background-color: $checkit-background-menu;
     line-height: 1;
     color: $checkit-white;
+    -webkit-user-select: none; /* Chrome/Safari */        
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+ */
+
 }
 
 .dangerzone {
