Add preselected dates dropdown
Added the angular-dropdowns package in order to add the ability to select
checkout dates ranging from a day, a week, and a month.
Removed date restriction subtitle and updated date restriction to one month.

Resolves #61

--- a/client/src/app/views/details/details.html
+++ b/client/src/app/views/details/details.html
@@ -36,15 +36,18 @@
                                 <div class="datepicker">
                                     <div class="title">return date:</div>
                                     <div class="input-block">
-                                        <input id="htmldatepicker" ng-model="vm.datepicker.returnDate" type="date" />
+                                        <!-- <input  ng-model="vm.datepicker.returnDate" type="date" /> -->
                                         <div class="row">
-                                            <div class="date-input"></div>
+                                            <div class="date-input">
+                                                <div id="datepicker" dropdown-select="vm.ddSelectOptions" dropdown-model="vm.ddSelectSelected">
+                                            </div>
+                                                
+                                            </div>
                                             <div class="date-image">
                                                 <img class="icon" src="assets/images/calendar_31x31.svg" alt="" />
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="instruction">Maximum three weeks.</div>
                                 </div>
                                 <!-- Admin only -->
                                 <div class="inputEmail" ng-if="vm.isAdmin">
