Add custom date selection for checking out a device

--- a/client/src/app/modals/modals.template.html
+++ b/client/src/app/modals/modals.template.html
@@ -5,7 +5,7 @@
 
 <!--Date out of Bounds warning-->
 <div class="reveal large text-center dialog" id="dateWarning" overlay="true" overlay-close="true">
-    <h4 >Date should be <em>at most</em> 3 weeks from now and not before today.</h4>
+    <h4 >Date should be <em>at most</em> 1 month from now and not before today.</h4>
     <div data-close class="secondary button">Got it</div>
 </div>
 
