--- a/client/src/app/views/details/details.scss
+++ b/client/src/app/views/details/details.scss
@@ -100,6 +100,9 @@
                                     border-radius: 5px;
                                     font-weight: 300;
                                     color: $checkit-background-base;
+                                    .un-active {
+                                        visibility: hidden;
+                                    }
                                     .dropdown {
 
                                         margin-left: 0;
@@ -138,6 +141,12 @@
                                 .icon {
                                     height: 31px;
                                     width: 31px;
+                                }
+                                i {
+                                    font-size: 30px;
+                                    line-height: 3rem;
+                                    height: 100%;
+                                    width: 100%;
                                 }
                             }
                         }
