Polish preselected return date feature
Add label to return date.
Update comments and remove old code.
Reset default checkout date after successful checkout.

--- a/client/src/app/views/details/details.html
+++ b/client/src/app/views/details/details.html
@@ -34,9 +34,9 @@
                         <div class="checkout-view-container">
                             <div class="checkout-view row">
                                 <div class="datepicker">
-                                    <div class="title"></div>
+                                    <div class="title">How long?</div>
                                     <div class="input-block">
-                                        <!--  -->
+                                        <!-- Return date dropdown -->
                                         <div ng-show="!vm.isCustomDate">
                                         <div class="row">
                                             <div class="date-input">
